--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 <header>
   <div class="bg">
     <div class="bg_overlay">
-
+      <div class="content_header">
+        <h1>hello</h1>
+      </div>
     </div>
   </div>
 </header>
