--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Aryan Gupta Website & UI/UX Designer</title>
+  <title>Festus Chidozie</title>
   <!--Linking Icon Tab -->
   <link rel="icon" href="assets/img/logo.png">
   <!--Linking Core Css-->
@@ -23,11 +23,11 @@
 
 <header>
   <img class="navbar-brand" id="logo" src="assets/img/logo.png" alt="">
-  <h2 class="navbar-brand" id="logo-text">Aryan Gupta</h2>
+  <h2 class="navbar-brand" id="logo-text">Festus Chidozie</h2>
   <div class="bg">
     <div class="bg_overlay">
       <div class="content_header">
-        <h1>Hello! I am <span id="hero-text">Aryan Gupta</span></h1>
+        <h1>Hello! I am <span id="hero-text">Festus Chidozie</span></h1>
         <p id="text-typeit"></p>
       </div>
     </div>
@@ -41,16 +41,15 @@
        <div class="row">
          <div class="col-lg-6">
            <div class="about_content">
-             <h4>Since 2 years, I have been designing beautiful and user friendly
-               interfaces for mobile and web. Designing is my passion and I
-               love it the most.</h4>
+             <h4>Since 4 years, I have been painting illustrated scenes.I have the hunger to learn More.
+               I also do electrical installation.</h4>
                <br>
-               <p>I am class 9th student,I have the enthusiasm and hunger to create things that are beautiful and functional.
-                 Things that makes life easier, that is simple and effective. After getting promoted in class seventh(7th) ,
-                 I have been continuously designing User Interfaces (UI)
+               <p>I have the enthusiasm and hunger to create things that are beautiful and functional.
+                 Things that makes life easier, that is simple and effective. After I graduated,
+                 I have been continuously providing Electrical installation
                  and assisting with information architecture for some of the big brands so far. Mine major
                  inclination has been towards
-                 making beautiful and user friendly interfaces for websites and mobile devices.</p>
+                 making more experienced in my carrer.</p>
 
            </div>
          </div>
@@ -79,19 +78,19 @@
 
            <div>
              <div class="container">
-               <h2 id="hero_name">Aryan Gupta</h2>
-               <p id="about_text">I m a <b>UI/UX Designer & Ethical Hacker</b> currently living in 'Jhansi', <br> India. My interest range from technology to reading.<br>
-                 I am also intrested in <b> AI, Machine Learning, Programming, <br>Cricket and Automation</b> if you'd like to get in touch,feel
+               <h2 id="hero_name">Festus Chidozie</h2>
+               <p id="about_text">I m a <b>Scne painter</b> currently living in 'Lagos', <br> Nigeria, My interest range from technology to designing.<br>
+                 I am also intrested in <b> electrical installation, Programming, <br>I like Cricket</b> if you'd like to get in touch,feel
                  free<br>to say hello through social links below.</p>
                  <br>
-                 <a class="icon" href="https://www.facebook.com/profile.php?id=100011478545704" target="_blank"><i class="fa fa-facebook"></i></a>
-                 <a class="icon" href="https://twitter.com/its_Aryan_Gupta" target="_blank"><i class="fa fa-twitter"></i></a>
-                 <a class="icon" href="https://www.instagram.com/its_aryan_gupta/" target="_blank"><i class="fa fa-instagram"></i></a>
+                 <a class="icon" href="https://www.facebook.com/festus.chidozie.52" target="_blank"><i class="fa fa-facebook"></i></a>
+                 <a class="icon" href="#" target="_blank"><i class="fa fa-twitter"></i></a>
+                 <a class="icon" href="#" target="_blank"><i class="fa fa-instagram"></i></a>
              </div>
            </div>
          </div>
          <div id="resize-on-small" class="col-lg-6">
-         <img style="height: 350px; width: 400px;" class="bg_about center-block" src="assets/img/ui4.jpg" alt="">
+         <img style="height: 350px; width: 400px;" class="bg_about center-block" src="assets/img/painter2.jpeg" alt="">
          </div>
        </div>
      </div>
@@ -101,19 +100,17 @@
    <div class="container">
      <div class="row">
        <div class="col-lg-6">
-         <img style="height: 300px; width: 500px;" class="img-responsive" src="assets/img/ui2.jpg" alt="">
+         <img style="height: 300px; width: 500px;" class="img-responsive" src="assets/img/painting3.png" alt="">
        </div>
        <div class="col-lg-4">
-         <h2 id="hero_name" class="text-center"><u>Hobbies</u></h2>
-         <p id="about_text" class="text-center">Currently i am studying in class 9th in <b>'Jhansi',India</b>
-         and I m the <b>Youngest Web Developer & Designer in my City. </b> <br> I am 12 when I started to code.<br>
-             <br>
-             <b>#technology</b><br>
-             <b>#reading</b><br>
-             <b>#Programming</b><br>
-             <b>#Cricket</b><br>
-             <b>#Music</b><br>
-             <b>#web development</b>
+             <div class="text-center text-info">
+               <br>
+               <b>#technology</b><br>
+               <b>#designing</b><br>
+               <b>#Cricket</b><br>
+               <b>#Music</b><br>
+               <b>#Mechanical working</b>
+             </div>
 
          </p>
        </div>
@@ -134,85 +131,31 @@
      <div data-aos="fade-right" class="row">
        <div data-aos="fade-right" class="col-md-4">
          <div class="content_skills">
-           <h3 class="title-skills"><i id="font-awesome-logo" class="fa fa-television"></i>&nbsp;&nbsp;</i>Website Design</h3>
+           <h3 class="title-skills"><i id="font-awesome-logo" class="fa fa-paint-brush"></i>&nbsp;&nbsp;</i>Creative Design</h3>
            <br>
-           <p>Whether its a One Page website or a full featured Ecommerce,
-              Business, Real Estate, Restaurant or Corporate website, the
-              focus on quality and individuality is never compromised. My
-              prime focus remain on providing a website which is customer or
-              business driven. A Website that can boost the usability of the
-              website its own unique character. I regularly use modern techniques
-              like responsiveness and visual appeal.</p>
+           <p>My Work is more important than Money,I m very creative in my work and I love my work
+             i dont just paint wallpapers but more than that i m a good Mechanical worker.</p>
          </div>
        </div>
        <div data-aos="fade-right" class="col-md-4">
          <div class="content_skills">
-           <h3 class="title-skills "><i id="font-awesome-logo" class="fa fa-mobile"></i>&nbsp;&nbsp;</i>Mobile</h3>
+           <h3 class="title-skills"><i id="font-awesome-logo" class="fa fa-delicious"></i>&nbsp;&nbsp;</i>Decorative Ideas</h3>
            <br>
-           <p>Designing user interfaces (UI) for applications for mobile and tablet
-              devices like iPhone, iPad and Android is one of the most challenging
-              task for every UI designer. And as the technology is evolving in blink
-               of eye, its important to keep up with everything related. I design
-               interfaces for mobile devices while keeping it with the current
-               specifications and make it stand out of the heap with its own distinct
-                user focused design.</p>
+           <p>I m not only work with your ideas but mine too.</p>
          </div>
        </div>
        <div data-aos="fade-right" class="col-md-4">
          <div class="content_skills">
-           <h3 class="title-skills "><i id="font-awesome-logo" class="fa fa-arrows-alt"></i>&nbsp;&nbsp;</i>Web UI-UX</h3>
+           <h3 class="title-skills"><i id="font-awesome-logo" class="fa fa-usd"></i>&nbsp;&nbsp;</i>Work In Affordable Price</h3>
            <br>
-           <p>User interface designing for web application has now changed to a whole
-              new level. Now a days customers need the interface to be more friendly
-              and easier to learn. A sophisticated, feature filled and easy to use
-              application makes it easier to sell and used. If you are looking for a
-              new look or want a more user inclined interface for your web application,
-              I can help you with it. Just share the details and I will help you in
-              getting one of the most user friendly interface.</p>
+           <p>I Work diligently and creatively at affordable amount.</p>
          </div>
        </div>
-       <div data-aos="fade-right" class="col-md-4">
-         <div class="content_skills">
-           <h3 class="title-skills "><i id="font-awesome-logo" class="fa fa-code"></i>&nbsp;&nbsp;</i>Website Development</h3>
-           <br>
-           <p>So now you got a good design and look for your website or application,
-             making it fully functional with the latest technology is mandatory aspect
-             . I have got the right team of people who are excellent in making things
-             work with the best practice on the global web. I can help you with Front
-              end development on responsive framework like Bootstrap, HTML5/CSS3, Foundation
-               etc or and making it programmed on technologies like Wordpress, Joomla, Magento,
-                Drupal, ASP .NET. Share your detail and requirement and I will provide you the
-                best quote and service.</p>
-         </div>
+
        </div>
-       <div data-aos="fade-right" class="col-md-4">
-         <div class="content_skills">
-           <h3 class="title-skills"><i id="font-awesome-logo" class="fa fa-code-fork"></i>&nbsp;&nbsp;</i>Graphic Design</h3>
-           <br>
-           <p>Like a good looking website, now a days there had been a major demand
-              for good looking promotional and branding materials. I can take care
-              of your branding need like One-Pager, T-Shirt, Envelopes, Email Newsletter
-              , Letterheads, Business Cards, Print Brochures, Powerpoint Presentation,
-              Flyers, Facebook Promotion and all those items that are essential to define
-               your brand. I have good skill of designing these materials on Adobe Illustrator
-                as Vector artwork and combine it with other platforms like MS Office to generate
-                 materials like Powerpoint Presentation, Letterheads etc. </p>
-         </div>
+
        </div>
-       <div data-aos="fade-right" class="col-md-4">
-         <div class="content_skills">
-           <h3 class="title-skills"><i id="font-awesome-logo" class="fa fa-paint-brush"></i>&nbsp;&nbsp;</i>Responsive Design</h3>
-           <br>
-           <p>Like a good looking website, now a days there had been a major demand
-              for good looking promotional and branding materials. I can take care
-              of your branding need like One-Pager, T-Shirt, Envelopes, Email Newsletter
-              , Letterheads, Business Cards, Print Brochures, Powerpoint Presentation,
-              Flyers, Facebook Promotion and all those items that are essential to define
-               your brand. I have good skill of designing these materials on Adobe Illustrator
-                as Vector artwork and combine it with other platforms like MS Office to generate
-                 materials like Powerpoint Presentation, Letterheads etc. </p>
-         </div>
-       </div>
+
      </div>
    </div>
  </section>
@@ -233,7 +176,7 @@
                   <br>
                      <img src="assets/img/shivam6.jpg" alt="">
                      <h3>Shivam Bhardwaj</h3>
-                     <p>“Aryan did a great job designing my web pages. I have pretty
+                     <p>“Festus Chidozie did a great job designing my Walls. I have pretty
                         much used him for most of my design phase and have been very
                         pleased, he has done an amazing job.“</p>
                         <br>
@@ -253,7 +196,7 @@
                   <br>
                      <img src="assets/img/new-img.jpeg" alt="">
                      <h3>Mark Dykstra</h3>
-                     <p>“Aryan is a very diligent worker and listens closely to
+                     <p>“Festus Chidozie is a very diligent worker and listens closely to
                        what is asked but also offers his own constructive opinions
                         and ideas based upon his skills and experience.“</p>
                         <br>
@@ -273,9 +216,9 @@
                   <br>
                      <img src="assets/img/Liaqat.jpg" alt="">
                      <h3>Liaqat Ali</h3>
-                     <p>“Aryan was fantastic! He intuitively got what I was asking
+                     <p>“Festus Chidozie was fantastic! He intuitively got what I was asking
                        for, even if I wasn’t entirely clear in my own head and his
-                       designs were really awesome. He was always responsive,
+                       designs were really awesome. He was always Creative,
                        I’d highly recommend him to anyone (and already have!).“</p>
                         <br>
                 </div>
@@ -348,8 +291,8 @@
                                        <div class="col-md-12">
                                            <button type="submit" class="btn btn-success"><span> Send Message</span></button>
                                            <div class="info">
-                                               <span><strong>Email</strong> : Support@Website.com</span>
-                                               <span><strong>Phone</strong> : +1 (315) 829 1927</span>
+                                               <span><strong>Email</strong> : Support@FestusChidozie.com</span>
+                                               <span><strong>Phone</strong> : +234 0810 150 1612</span>
                                            </div>
                                        </div>
 
@@ -426,9 +369,9 @@
        <div class="container">
          <div class="row">
            <div align="center">
-             <a class="icon" href="https://www.facebook.com/profile.php?id=100011478545704" target="_blank"><i class="fa fa-facebook"></i></a>
-             <a class="icon" href="https://twitter.com/its_Aryan_Gupta" target="_blank"><i class="fa fa-twitter"></i></a>
-             <a class="icon" href="https://www.instagram.com/its_aryan_gupta/" target="_blank"><i class="fa fa-instagram"></i></a>
+             <a class="icon" href="https://www.facebook.com/festus.chidozie.52" target="_blank"><i class="fa fa-facebook"></i></a>
+             <a class="icon" href="#" target="_blank"><i class="fa fa-twitter"></i></a>
+             <a class="icon" href="#" target="_blank"><i class="fa fa-instagram"></i></a>
              <br>
              <h5 class="copyright"><span>&copy;</span>2018 Copyright. ARYAN GUPTA. ALL RIGHTS RESERVED</h5>
            </div>
@@ -446,7 +389,7 @@
 <script src="js/typeit.min.js"></script>
 <script type="text/javascript">
 new TypeIt('#text-typeit', {
-    strings: [ "UI/UX Designer", "Web Developer", "programmer"],
+    strings: [ "Scene Painter", "Mechanical Worker", "Good thinker"],
     speed: 80,
     breakLines: false,
     autoStart: false,
